# backend

./: .gitignore  alembic.ini  plans.md  pyproject.toml
migrations/: env.py
migrations/versions/: 47b475133785_create_items.py  8911f27a5ad1_init_items.py  d1a8dd68174e_create_items.py
src/backend/: db.py  main.py  models.py
src/backend/api/: routes.py
