[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Matthew Grayson", email = "matthew@mohl.app" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "black>=24.8",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","ASYNC","PYI"]


[tool.black]
line-length = 100

[tool.pyright]
include = ["app"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
venvPath = "."
venv = ".venv"

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
